Make Kernel#lambda return non-lambda when block is not literal

This restores the behavior of Kernel#lambda from Ruby 2.4.x
when it receives a non literal block.

Semantically speaking, once a literal block is passed into a method
which takes an ampersand argument, the block becomes a non-lambda
Proc object. When Kernel#lambda recieves a non-lambda proc,
it is supposed to simply return it.

Because of lazy proc allocation, Kernel#lambda wasn't able to tell
the difference between a literal block and a block that has passed
through an ampersand argument and is semantically supposed to be
a Proc object.

This commit uses a new pointer tag, `0x2`, to indicate that a block
has passed through an ampersand argument. In all other regards,
this block handler tag is the same as `block_handler_type_iseq`.
I then use this new tag in Kernel#lambda to implement the
2.4.x spec.

[Bug #15620]